--- a/.coveragerc
+++ b/.coveragerc
@@ -2,8 +2,8 @@
 
 [run]
 branch = True
-source = sklfirstorder
-include = */sklfirstorder/*
+source = discretefirstorder
+include = */discretefirstorder/*
 omit =
     */setup.py
 
