--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,19 @@
 name: sklearn-discretefirstorder
 dependencies:
-  - numpy
-  - scipy
-  - scikit-learn
+  - matplotlib>=3.5
+  - numpy>=1.22
+  - pillow>=9.0
+  - python>=3.8
+  - scikit-learn>=1.0
+  - scipy>=1.7
+  - pip:
+      - black>=22.6.0
+      - coverage>=6.4.2
+      - flake8>=4.0.1
+      - numpydoc>=1.4.0
+      - pre-commit>=2.19.0
+      - pytest>=7.1.2
+      - pytest-cov>=3.0.0
+      - sphinx>=5.1.1
+      - sphinx-gallery>=0.11.0
+      - sphinx-rtd-theme>=1.0.0
