--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,6 +1,9 @@
 formats:
   - none
 requirements_file: requirements.txt
+build:
+  tools:
+    python: "3.8"
 python:
   pip_install: true
   extra_requirements:
